--- a/exploration/01_EDA_usafacts.ipynb
+++ b/exploration/01_EDA_usafacts.ipynb
@@ -402,10 +402,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "905"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# visualize the number of unique counties\n",
+    "len(np.unique(raw['countyFIPS']))"
+   ]
   },
   {
    "cell_type": "code",
