modify clean data pipeline to be able to detect changes in the data

--- a/eda_usafacts/02_clean_usafacts_data.ipynb
+++ b/eda_usafacts/02_clean_usafacts_data.ipynb
@@ -24,11 +24,7 @@
    "source": [
     "# load data\n",
     "import numpy as np\n",
-    "import scipy as sp\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.dates as mdates\n",
-    "import matplotlib.cbook as cbook"
+    "import pandas as pd"
    ]
   },
   {
@@ -44,6 +40,30 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[12063, 13243, 45061, 50023]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# preprocess get all the duplicates\n",
+    "replicates = raw.groupby(['countyFIPS', 'stateFIPS'])['County Name'].count().reset_index()\n",
+    "redundant_countyFIPS = list(replicates.loc[replicates['County Name'] > 1, 'countyFIPS'])\n",
+    "assert redundant_countyFIPS == [12063, 13243, 45061, 50023], \"The data source seems to have changed\"\n",
+    "redundant_countyFIPS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -332,29 +352,30 @@
        "[8 rows x 63 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# visualize the rows that have duplicates\n",
-    "raw[raw['countyFIPS'].isin([45061, 50023, 13243, 12063])]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# preprocess change Richmond, GA's county code\n",
-    "raw.iloc[224, 0] = 13245"
+    "raw[raw['countyFIPS'].isin(redundant_countyFIPS)]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# preprocess change Richmond, GA's county code\n",
+    "assert raw.iloc[224, 0] == 13243 and raw.iloc[224, 1] == 'Richmond County', 'The data source have changed.'\n",
+    "raw.iloc[224, 0] = 13245"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +562,7 @@
        "[4 rows x 63 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +799,7 @@
        "[5 rows x 63 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
