reorganize file structure

--- a/00_load_data.ipynb
+++ b/00_load_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.dates as mdates\n",
     "import matplotlib.cbook as cbook\n",
-    "import merge_data"
+    "from functions import merge_data"
    ]
   },
   {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "      dtype='object', length=7232)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,12 +73,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from os.path import join as oj\n",
-    "import load_medicare_data\n",
+    "from functions import load_medicare_data\n",
     "ahrf_data = 'data/hrsa/data_AHRF_2018-2019/processed/df_renamed.pkl'\n",
     "usafacts_data_cases = 'data/usafacts/confirmed_cases_mar22.csv'\n",
     "usafacts_data_deaths = 'data/usafacts/deaths_mar22.csv'\n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>Statewide Unallocated</td>\n",
        "      <td>AL</td>\n",
@@ -169,7 +169,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>1003</td>\n",
        "      <td>Baldwin County</td>\n",
        "      <td>AL</td>\n",
@@ -193,7 +193,7 @@
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>1015</td>\n",
        "      <td>Calhoun County</td>\n",
        "      <td>AL</td>\n",
@@ -217,7 +217,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>1017</td>\n",
        "      <td>Chambers County</td>\n",
        "      <td>AL</td>\n",
@@ -241,7 +241,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>1043</td>\n",
        "      <td>Cullman County</td>\n",
        "      <td>AL</td>\n",
@@ -284,12 +284,12 @@
        "3                 0                 0                 0                 0   \n",
        "4                 0                 0                 0                 0   \n",
        "\n",
-       "   #Cases_1/27/2020        ...         #Cases_3/12/2020  #Cases_3/13/2020  \\\n",
-       "0                 0        ...                        0                 1   \n",
-       "1                 0        ...                        0                 0   \n",
-       "2                 0        ...                        0                 0   \n",
-       "3                 0        ...                        0                 1   \n",
-       "4                 0        ...                        0                 0   \n",
+       "   #Cases_1/27/2020  ...  #Cases_3/12/2020  #Cases_3/13/2020  \\\n",
+       "0                 0  ...                 0                 1   \n",
+       "1                 0  ...                 0                 0   \n",
+       "2                 0  ...                 0                 0   \n",
+       "3                 0  ...                 0                 1   \n",
+       "4                 0  ...                 0                 0   \n",
        "\n",
        "   #Cases_3/14/2020  #Cases_3/15/2020  #Cases_3/16/2020  #Cases_3/17/2020  \\\n",
        "0                 1                 0                 0                 0   \n",
@@ -308,7 +308,7 @@
        "[5 rows x 64 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>Alabama</td>\n",
        "      <td>Autauga</td>\n",
        "      <td>1001.0</td>\n",
@@ -393,7 +393,7 @@
        "      <td>4.0647</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>Alabama</td>\n",
        "      <td>Baldwin</td>\n",
        "      <td>1003.0</td>\n",
@@ -417,7 +417,7 @@
        "      <td>3.8740</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>Alabama</td>\n",
        "      <td>Barbour</td>\n",
        "      <td>1005.0</td>\n",
@@ -441,7 +441,7 @@
        "      <td>4.5822</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <td>5</td>\n",
        "      <td>Alabama</td>\n",
        "      <td>Bibb</td>\n",
        "      <td>1007.0</td>\n",
@@ -465,7 +465,7 @@
        "      <td>5.5356</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <td>6</td>\n",
        "      <td>Alabama</td>\n",
        "      <td>Blount</td>\n",
        "      <td>1009.0</td>\n",
@@ -508,45 +508,45 @@
        "5               10.8011              37.7588            4.9055   \n",
        "6               11.4934              34.2423            5.3258   \n",
        "\n",
-       "   condition_Atrial Fibrillation  condition_Autism  condition_Cancer  \\\n",
-       "2                         8.5918               NaN            8.4762   \n",
-       "3                         9.4952            0.1046            8.5693   \n",
-       "4                         6.8856               NaN            8.3313   \n",
-       "5                         8.9559            0.0000            7.1557   \n",
-       "6                         8.4004               NaN            6.7350   \n",
+       "   condition_Atrial Fibrillation  condition_Autism  condition_Cancer  ...  \\\n",
+       "2                         8.5918               NaN            8.4762  ...   \n",
+       "3                         9.4952            0.1046            8.5693  ...   \n",
+       "4                         6.8856               NaN            8.3313  ...   \n",
+       "5                         8.9559            0.0000            7.1557  ...   \n",
+       "6                         8.4004               NaN            6.7350  ...   \n",
        "\n",
-       "         ...         condition_Drug Abuse  condition_HIV/AIDS  \\\n",
-       "2        ...                       3.2171              0.2504   \n",
-       "3        ...                       3.9631              0.1627   \n",
-       "4        ...                       4.9743              0.6616   \n",
-       "5        ...                       4.4554                 NaN   \n",
-       "6        ...                       4.8499                 NaN   \n",
+       "   condition_Drug Abuse  condition_HIV/AIDS  condition_Heart Failure  \\\n",
+       "2                3.2171              0.2504                  15.8544   \n",
+       "3                3.9631              0.1627                  12.8695   \n",
+       "4                4.9743              0.6616                  13.7711   \n",
+       "5                4.4554                 NaN                  17.3717   \n",
+       "6                4.8499                 NaN                  16.2518   \n",
        "\n",
-       "   condition_Heart Failure  condition_Hepatitis  condition_Hyperlipidemia  \\\n",
-       "2                  15.8544               0.5201                   48.9694   \n",
-       "3                  12.8695               0.5114                   44.0747   \n",
-       "4                  13.7711               0.4166                   46.5572   \n",
-       "5                  17.3717               0.9001                   48.5149   \n",
-       "6                  16.2518               0.6772                   46.4861   \n",
+       "   condition_Hepatitis  condition_Hyperlipidemia  condition_Hypertension  \\\n",
+       "2               0.5201                   48.9694                 63.7064   \n",
+       "3               0.5114                   44.0747                 60.3339   \n",
+       "4               0.4166                   46.5572                 67.2384   \n",
+       "5               0.9001                   48.5149                 67.9118   \n",
+       "6               0.6772                   46.4861                 63.7811   \n",
        "\n",
-       "   condition_Hypertension  condition_Ischemic Heart Disease  \\\n",
-       "2                 63.7064                           31.3234   \n",
-       "3                 60.3339                           31.8638   \n",
-       "4                 67.2384                           26.4151   \n",
-       "5                 67.9118                           28.0378   \n",
-       "6                 63.7811                           30.5820   \n",
+       "   condition_Ischemic Heart Disease  condition_Osteoporosis  \\\n",
+       "2                           31.3234                  6.4149   \n",
+       "3                           31.8638                  6.2682   \n",
+       "4                           26.4151                  4.7047   \n",
+       "5                           28.0378                  6.1206   \n",
+       "6                           30.5820                  5.7284   \n",
        "\n",
-       "   condition_Osteoporosis  condition_Psychotic Disorders  condition_Stroke  \n",
-       "2                  6.4149                         3.0437            4.0647  \n",
-       "3                  6.2682                         2.0997            3.8740  \n",
-       "4                  4.7047                         4.5087            4.5822  \n",
-       "5                  6.1206                         3.6454            5.5356  \n",
-       "6                  5.7284                         2.8184            4.4290  \n",
+       "   condition_Psychotic Disorders  condition_Stroke  \n",
+       "2                         3.0437            4.0647  \n",
+       "3                         2.0997            3.8740  \n",
+       "4                         4.5087            4.5822  \n",
+       "5                         3.6454            5.5356  \n",
+       "6                         2.8184            4.4290  \n",
        "\n",
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
        "      dtype='object', length=7232)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
