add and merge diabetes data

--- a/00_load_data.ipynb
+++ b/00_load_data.ipynb
@@ -26,13 +26,24 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Tiffany/My Documents/Research/Yu/covid-19/covid-19-geographic-risk-prediction/functions/merge_data.py:21: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support skipfooter; you can avoid this warning by specifying engine='python'.\n",
+      "  diabetes = pd.read_csv(diabetes, skiprows = 2, skipfooter = 1)\n"
+     ]
+    }
+   ],
    "source": [
     "ahrf_data = 'data/hrsa/data_AHRF_2018-2019/processed/df_renamed.pkl'\n",
     "usafacts_data_cases = 'data/usafacts/confirmed_cases_mar22.csv'\n",
+    "diabetes = 'data/diabetes/DiabetesAtlasCountyData.csv'\n",
     "df = merge_data.merge_data(ahrf_data=ahrf_data, \n",
     "                           usafacts_data_cases=usafacts_data_cases,\n",
-    "                           medicare_group=\"All Beneficiaries\") # also cleans usafacts data"
+    "                           medicare_group=\"All Beneficiaries\",\n",
+    "                           diabetes=diabetes) # also cleans usafacts data"
    ]
   },
   {
@@ -47,12 +58,12 @@
        "       'SecondaryEntityOfFile', 'DateofFile', 'DateofCreation', 'FileLength',\n",
        "       'StateName', 'StateNameAbbreviation', 'CountyName',\n",
        "       ...\n",
-       "       'condition_Drug Abuse', 'condition_HIV/AIDS', 'condition_Heart Failure',\n",
-       "       'condition_Hepatitis', 'condition_Hyperlipidemia',\n",
-       "       'condition_Hypertension', 'condition_Ischemic Heart Disease',\n",
-       "       'condition_Osteoporosis', 'condition_Psychotic Disorders',\n",
-       "       'condition_Stroke'],\n",
-       "      dtype='object', length=7232)"
+       "       'condition_HIV/AIDS', 'condition_Heart Failure', 'condition_Hepatitis',\n",
+       "       'condition_Hyperlipidemia', 'condition_Hypertension',\n",
+       "       'condition_Ischemic Heart Disease', 'condition_Osteoporosis',\n",
+       "       'condition_Psychotic Disorders', 'condition_Stroke',\n",
+       "       'Diabetes Percentage'],\n",
+       "      dtype='object', length=7233)"
       ]
      },
      "execution_count": 3,
@@ -75,23 +86,37 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Tiffany/Applications/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:19: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support skipfooter; you can avoid this warning by specifying engine='python'.\n"
+     ]
+    }
+   ],
    "source": [
     "from os.path import join as oj\n",
     "from functions import load_medicare_data\n",
     "ahrf_data = 'data/hrsa/data_AHRF_2018-2019/processed/df_renamed.pkl'\n",
     "usafacts_data_cases = 'data/usafacts/confirmed_cases_mar22.csv'\n",
     "usafacts_data_deaths = 'data/usafacts/deaths_mar22.csv'\n",
-    "\n",
+    "diabetes_data = 'data/diabetes/DiabetesAtlasCountyData.csv'\n",
     "\n",
     "# load data\n",
     "facts = pd.read_pickle(ahrf_data)\n",
     "facts = facts.rename(columns={'Blank': 'id'})\n",
+    "\n",
     "cases = pd.read_csv(usafacts_data_cases, encoding=\"iso-8859-1\")\n",
     "cases = cases.rename(columns={k: '#Cases_' + k for k in cases.keys() \n",
     "                              if not 'county' in k.lower()\n",
     "                              and not 'state' in k.lower()})\n",
-    "chronic_all_orig = load_medicare_data.loadChronicSheet(\"All Beneficiaries\")"
+    "\n",
+    "chronic_all_orig = load_medicare_data.loadChronicSheet(\"All Beneficiaries\")\n",
+    "\n",
+    "diabetes = pd.read_csv(diabetes_data, skiprows = 2, skipfooter = 1)\n",
+    "diabetes = diabetes[[\"CountyFIPS\", \"Percentage\"]]\n",
+    "diabetes.columns = [\"countyFIPS\", \"Diabetes Percentage\"]"
    ]
   },
   {
@@ -101,211 +126,19 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>countyFIPS</th>\n",
-       "      <th>County Name</th>\n",
-       "      <th>State</th>\n",
-       "      <th>stateFIPS</th>\n",
-       "      <th>#Cases_1/22/2020</th>\n",
-       "      <th>#Cases_1/23/2020</th>\n",
-       "      <th>#Cases_1/24/2020</th>\n",
-       "      <th>#Cases_1/25/2020</th>\n",
-       "      <th>#Cases_1/26/2020</th>\n",
-       "      <th>#Cases_1/27/2020</th>\n",
-       "      <th>...</th>\n",
-       "      <th>#Cases_3/12/2020</th>\n",
-       "      <th>#Cases_3/13/2020</th>\n",
-       "      <th>#Cases_3/14/2020</th>\n",
-       "      <th>#Cases_3/15/2020</th>\n",
-       "      <th>#Cases_3/16/2020</th>\n",
-       "      <th>#Cases_3/17/2020</th>\n",
-       "      <th>#Cases_3/18/2020</th>\n",
-       "      <th>#Cases_3/19/2020</th>\n",
-       "      <th>#Cases_3/20/2020</th>\n",
-       "      <th>#Cases_3/21/2020</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Statewide Unallocated</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>1003</td>\n",
-       "      <td>Baldwin County</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>1015</td>\n",
-       "      <td>Calhoun County</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>1017</td>\n",
-       "      <td>Chambers County</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>1043</td>\n",
-       "      <td>Cullman County</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 64 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   countyFIPS            County Name State  stateFIPS  #Cases_1/22/2020  \\\n",
-       "0           0  Statewide Unallocated    AL          1                 0   \n",
-       "1        1003         Baldwin County    AL          1                 0   \n",
-       "2        1015         Calhoun County    AL          1                 0   \n",
-       "3        1017        Chambers County    AL          1                 0   \n",
-       "4        1043         Cullman County    AL          1                 0   \n",
-       "\n",
-       "   #Cases_1/23/2020  #Cases_1/24/2020  #Cases_1/25/2020  #Cases_1/26/2020  \\\n",
-       "0                 0                 0                 0                 0   \n",
-       "1                 0                 0                 0                 0   \n",
-       "2                 0                 0                 0                 0   \n",
-       "3                 0                 0                 0                 0   \n",
-       "4                 0                 0                 0                 0   \n",
-       "\n",
-       "   #Cases_1/27/2020  ...  #Cases_3/12/2020  #Cases_3/13/2020  \\\n",
-       "0                 0  ...                 0                 1   \n",
-       "1                 0  ...                 0                 0   \n",
-       "2                 0  ...                 0                 0   \n",
-       "3                 0  ...                 0                 1   \n",
-       "4                 0  ...                 0                 0   \n",
-       "\n",
-       "   #Cases_3/14/2020  #Cases_3/15/2020  #Cases_3/16/2020  #Cases_3/17/2020  \\\n",
-       "0                 1                 0                 0                 0   \n",
-       "1                 1                 1                 1                 1   \n",
-       "2                 0                 0                 0                 0   \n",
-       "3                 1                 0                 0                 0   \n",
-       "4                 0                 0                 0                 0   \n",
-       "\n",
-       "   #Cases_3/18/2020  #Cases_3/19/2020  #Cases_3/20/2020  #Cases_3/21/2020  \n",
-       "0                 0                 0                 0                 0  \n",
-       "1                 1                 1                 2                 2  \n",
-       "2                 1                 1                 1                 1  \n",
-       "3                 0                 1                 1                 1  \n",
-       "4                 0                 0                 1                 2  \n",
-       "\n",
-       "[5 rows x 64 columns]"
+       "countyFIPS           int64\n",
+       "County Name         object\n",
+       "State               object\n",
+       "stateFIPS            int64\n",
+       "#Cases_1/22/2020     int64\n",
+       "                     ...  \n",
+       "#Cases_3/17/2020     int64\n",
+       "#Cases_3/18/2020     int64\n",
+       "#Cases_3/19/2020     int64\n",
+       "#Cases_3/20/2020     int64\n",
+       "#Cases_3/21/2020     int64\n",
+       "Length: 64, dtype: object"
       ]
      },
      "execution_count": 5,
@@ -315,7 +148,8 @@
    ],
    "source": [
     "#visualize the top 5 rows\n",
-    "cases.head(5)"
+    "cases.head(5)\n",
+    "cases.dtypes"
    ]
   },
   {
@@ -556,6 +390,84 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>countyFIPS</th>\n",
+       "      <th>Diabetes Percentage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1001</td>\n",
+       "      <td>9.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1003</td>\n",
+       "      <td>8.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>1005</td>\n",
+       "      <td>15.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>1007</td>\n",
+       "      <td>13.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>1009</td>\n",
+       "      <td>14.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   countyFIPS Diabetes Percentage\n",
+       "0        1001                 9.9\n",
+       "1        1003                 8.5\n",
+       "2        1005                15.7\n",
+       "3        1007                13.3\n",
+       "4        1009                14.9"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diabetes.head(5)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -564,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,19 +502,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "facts['countyFIPS'] = facts['Header-FIPSStandCtyCode'].astype(int)\n",
     "chronic_all_orig['countyFIPS'] = chronic_all_orig['countyFIPS'].astype(int)\n",
     "df = pd.merge(facts, cases, on='countyFIPS')\n",
-    "df = pd.merge(df, chronic_all_orig, on='countyFIPS')"
+    "df = pd.merge(df, chronic_all_orig, on='countyFIPS')\n",
+    "df = pd.merge(df, diabetes, on='countyFIPS')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +533,7 @@
        "      dtype='object', length=7232)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,6 +541,33 @@
    "source": [
     "df.keys()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1002, 7232)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
